config exception handler, log4j. refactor address controller with exception handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ hibernate.format_sql=true;
 spring.devtools.livereload.enabled=true
 #spring.thymeleaf.cache=false
 
+
+spring.mvc.throw-exception-if-no-handler-found=true
+#disable resource handling
+spring.web.resources.add-mappings=false
