setup database H2 with init data

--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,8 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <scope>test</scope>
+<!--            <version>1.4.200</version> &lt;!&ndash; ex: 1.2.140 &ndash;&gt;-->
+<!--            <scope>runtime</scope>-->
         </dependency>
 
         <dependency>
