--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -3,16 +3,22 @@ spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url= jdbc:mysql://localhost:3306/coffee_shop?createDatabaseIfNotExist=true
 spring.datasource.username= root
 spring.datasource.password= root
+
 #----------- JPA / Hibernate --------------
 spring.jpa.show-sql= true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.format_sql=true;
+
 ##Config for devtools
 spring.devtools.livereload.enabled=true
-#spring.thymeleaf.cache=false
+
+#init data when start app
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
 
 
 spring.mvc.throw-exception-if-no-handler-found=true
-#disable resource handling
+#disable default resource handling
 spring.web.resources.add-mappings=false
