--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.driver-class-name= org.h2.Driver
-spring.datasource.url= jdbc:h2:mem:myDb
+spring.datasource.url= jdbc:h2:mem:testdb
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 hibernate.hbm2ddl.auto=create
 spring.h2.console.enabled=true
