--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,8 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-starter-com.tma.sample.test</artifactId>
+            <scope>com.tma.sample.test</scope>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <scope>test</scope>
+            <scope>com.tma.sample.test</scope>
         </dependency>
 
 
